--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/h/index.xhtml
@@ -109,7 +109,9 @@
                             draggable: true,
                             multipleDrag: { left: true, right: false },
                             innerDrag: { left: false, right: true },
-                            outerDrag: { left: true, right: true }
+                            outerDrag: { left: true, right: true },
+                            afterMoveRight: function() {sortQualificationInfoSelected()},
+                            afterMoveLeft: function() {sortQualificationInfoList()}
                         }"></div>
 
                     </div>
