--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/b.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/b.xhtml
@@ -1,3 +1,7 @@
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:com="http://xmlns.jcp.org/jsf/component"
+                xmlns:h="http://xmlns.jcp.org/jsf/html">
 <div style="width: 857px">
     <div class="flex valign-center tab-row">
         <!--B1_1 賃金テーブルコード/名称 -->
@@ -49,37 +53,47 @@
 	                    <td>
 	                        <div data-bind="text: elementName"></div>
 	                    </td>
-	                    <td style="text-align: center;" data-bind="if: masterNumericClassification() == 1">
-	                        <div data-bind="with: $vm.elementRangeSetting().firstElementRange">
-	                            <input id="B2_8" tabindex="12" data-bind="ntsNumberEditor: { 
-	                            		required: true, 
-	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(), 
-	                            		constraint: 'RangeLowerLimit', 
-	                            		value: rangeLowerLimit, 
-	                            		name: '#[QMM016_30]', 
+	                    <td style="text-align: center;">
+                            <com:ko-if bind="masterNumericClassification() == 0">
+                                <div>#{i18n.getText('QMM016_34')}</div>
+                            </com:ko-if>
+                            <com:ko-if bind="masterNumericClassification() == 1">
+                                <div data-bind="with: $vm.elementRangeSetting().firstElementRange">
+                                    <input id="B2_8" tabindex="12" data-bind="ntsNumberEditor: {
+	                            		required: true,
+	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(),
+	                            		constraint: 'RangeLowerLimit',
+	                            		value: rangeLowerLimit,
+	                            		name: '#[QMM016_30]',
 	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
-	                            <div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
-	                            <input id="B2_10" tabindex="13" data-bind="ntsNumberEditor: { 
-	                            		required: true, 
-	                            		enable: $vm.updateMode() &amp;&amp; 
-	                            		$vm.isSelectedHistory(), 
-	                            		constraint: 'RangeUpperLimit', 
-	                            		value: rangeUpperLimit, 
+                                    <div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
+                                    <input id="B2_10" tabindex="13" data-bind="ntsNumberEditor: {
+	                            		required: true,
+	                            		enable: $vm.updateMode() &amp;&amp;
+	                            		$vm.isSelectedHistory(),
+	                            		constraint: 'RangeUpperLimit',
+	                            		value: rangeUpperLimit,
 	                            		name: '#[QMM016_32]',
 	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
-	                        </div>
+                                </div>
+                            </com:ko-if>
 	                    </td>
-	                    <td style="text-align: center;" data-bind="if: masterNumericClassification() == 1">
-	                        <div data-bind="with: $vm.elementRangeSetting().firstElementRange">
-	                            <input id="B2_11" tabindex="14" data-bind="ntsNumberEditor: { 
-	                            		required: true, 
-	                            		enable: $vm.updateMode() &amp;&amp; 
-	                            		$vm.isSelectedHistory(), 
-	                            		constraint: 'StepIncrement', 
-	                            		value: stepIncrement, 
+	                    <td style="text-align: center;">
+                            <com:ko-if bind="masterNumericClassification() == 0">
+                                <div>#{i18n.getText('QMM016_34')}</div>
+                            </com:ko-if>
+                            <com:ko-if bind="masterNumericClassification() == 1">
+                                <div data-bind="with: $vm.elementRangeSetting().firstElementRange">
+                                    <input id="B2_11" tabindex="14" data-bind="ntsNumberEditor: {
+	                            		required: true,
+	                            		enable: $vm.updateMode() &amp;&amp;
+	                            		$vm.isSelectedHistory(),
+	                            		constraint: 'StepIncrement',
+	                            		value: stepIncrement,
 	                            		name: '#[QMM016_33]',
 	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
-	                        </div>
+                                </div>
+                            </com:ko-if>
 	                    </td>
 	                </tr>
                 </tbody>
@@ -129,3 +143,4 @@
         </table>
     </div>
 </div>
+</ui:composition>
