--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/h/index.xhtml
@@ -100,6 +100,7 @@
                         <div tabindex="10" id="swap-list" data-bind="ntsSwapList: {
                             showSearchBox: { showLeft : true, showRight: false},
                             height: 330,
+                            rows: 10,
                             dataSource: qualificationInformationList,
                             primaryKey: 'qualificationCode',
                             columns: columns,
