--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/e.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/e.xhtml
@@ -54,7 +54,7 @@
         </div>
         <div class="tab-row" style="margin-top: 40px;">
             <div data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM016_36')}</div>
-            <button tabindex="13" style="margin-left: 30px;">#{i18n.getText('QMM016_37')}</button>
+            <button tabindex="13" style="margin-left: 30px;" data-bind="enable: false">#{i18n.getText('QMM016_37')}</button>
         </div>
         <hr></hr>
         <div class="tab-row E5_1" style="margin-top: 20px;"
