--- a/nts.uk/uk.mobile/ClientApp/views/login/style.scss
+++ b/nts.uk/uk.mobile/ClientApp/views/login/style.scss
@@ -6,6 +6,9 @@ div#login {
         border-radius: 15px;
         legend {
             width: auto;
+            padding: 0px 15px;
+            border-radius: 999px;
+            border: 1px solid #ccc;
         }
         .btn {
             min-width: 120px;
