--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/g/index.xhtml
@@ -17,7 +17,7 @@
     </ui:define>
     <ui:define name="content">
         <div id="contents-area">
-            <div  style="margin-left: 35px; margin-top: 20px">
+            <div style="margin-left: 35px; margin-top: 20px">
                 <table id="G2_1" tabindex="1"
                        data-bind="ntsGridList: {
                         rows: 15,
@@ -35,7 +35,7 @@
         </div>
         <div id="functions-area-bottom">
             <button id="G1_1" tabindex="2" class="x-large proceed "
-                    data-bind="click: decideSelect">#{i18n.getText('QMM016_54')}</button>
+                    data-bind="click: decideSelect, enable: selectedStatementItemName().length > 0">#{i18n.getText('QMM016_54')}</button>
             <button tabindex="3" class="large" data-bind="click: cancelSelect">#{i18n.getText('QMM016_55')}</button>
         </div>
     </ui:define>
