--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/c.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/c.xhtml
@@ -2,7 +2,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
-<div style="width: 857px">
+<div style="width: 800px">
     <div class="flex valign-center tab-row">
         <div style="width: 110px;"
              data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM016_8')}</div>
@@ -21,14 +21,14 @@
     </div>
     <hr></hr>
     <div class="tab-row">
-        <div style="width: 50px; vertical-align: top"
+        <div style="width: 70px; vertical-align: top"
              data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM016_22')}</div>
         <div class="fixed-table-container">
             <table class = "custom-fixed-table normal-fixed-table">
                 <colgroup>
                     <col width="30px"/>
-                    <col width="220px"/>
-                    <col width="380px"/>
+                    <col width="163px"/>
+                    <col width="360px"/>
                     <col width="170px"/>
                 </colgroup>
                 <thead>
@@ -63,7 +63,7 @@
                             			value: rangeLowerLimit,
                             			name: '#[QMM016_30]',
 	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
-									<div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
+									<div>#{i18n.getText('QMM016_31')}</div>
 									<input tabindex="13" id="C2_10" data-bind="ntsNumberEditor: {
 	                            		required: true,
 	                            		enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(),
