update button toggler for menu top

--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/navbar.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/navbar.scss
@@ -2,6 +2,8 @@
     padding: 0;
     .navbar-toggler {
         outline: none;
+        padding: 0px 7px;
+        margin-right: 7px;
     }
     .navbar-brand {
         cursor: pointer;
