--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/c.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/c.xhtml
@@ -109,7 +109,7 @@
 	                            		value: rangeLowerLimit,
 	                            		name: '#[QMM016_30]',
 	                            		option: {grouplength: 3, decimallength: 2, width: '143px'}}"/>
-									<div style="margin-left: 10px; margin-right: 10px;">#{i18n.getText('QMM016_31')}</div>
+									<div>#{i18n.getText('QMM016_31')}</div>
 									<input tabindex="16" id="C2_17" data-bind="ntsNumberEditor: {
 	                            		required: true,
                             			enable: $vm.updateMode() &amp;&amp; $vm.isSelectedHistory(),
