--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/001/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/001/b/index.xhtml
@@ -22,6 +22,9 @@
 				 
 			</div>
 			<div id="contents-area"> 
+				<div data-bind="if: eralRecord() > 0">
+					<H3>100 of <span data-bind="text: eralRecord"/> records are showed!! </H3>
+				</div>
 				<table tabindex="4" id="grid"></table>
 			</div>
 		</ui:define>
