--- a/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
@@ -11,5 +11,6 @@
 @import './lumen/button.scss';
 @import './lumen/navbar.scss';
 @import './lumen/checkbox.scss';
+@import './lumen/accordion.scss';
 @import './lumen/code.scss';
 @import './lumen/markdown.scss';
