add sample kdl001, kdl002

--- a/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
@@ -12,5 +12,6 @@
 @import './lumen/navbar.scss';
 @import './lumen/checkbox.scss';
 @import './lumen/accordion.scss';
+@import './lumen/listgroup.scss';
 @import './lumen/code.scss';
 @import './lumen/markdown.scss';
