update template for nav-menu

--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/listgroup.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/listgroup.scss
@@ -1,6 +1,10 @@
 .list-group {
     &-selection {
         .list-group-item {
+            &.selected {
+                color: #fff;
+                background-color: $primary;
+            }
             &:after {
                 content: "›";
                 font-size: 32px;
