--- a/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
@@ -15,3 +15,4 @@
 @import './lumen/listgroup.scss';
 @import './lumen/code.scss';
 @import './lumen/markdown.scss';
+@import './lumen/time-editor.scss'
