--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/f.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/f.xhtml
@@ -146,7 +146,7 @@
         <table>
 			<thead>
 				<tr>
-					<td rowspan="2" style="border: none;"><img src="../resource/＃QMM017_6.png"></img></td>
+					<td rowspan="2" style="border: none; width: 150px"><img src="../resource/＃QMM017_6.png"></img></td>
 					<td style="border: none; padding: 0 0px">
 						<div style="display: inline-block; background-color: #CFF1A5; border: 1px solid #CCC; font-weight: bold; color: #000;">
 							<div style="width: 150px; display: inline-block;">
@@ -171,75 +171,18 @@
 					<td style="border: none;"></td>
 				</tr>
 				<tr>
-					<th class="ui-widget-header" style="height: 32px">
+					<th class="ui-widget-header" style="background-color: #CFF1A5; height: 32px">
 						<div data-bind="with: $vm.selectedWageTable().elementInformation().twoDimensionElement">
 	                        <div data-bind="text: elementName"></div>
 	                    </div>
 	                </th>
-					<td rowspan="2" style="border: none;"><img src="../resource/＃QMM017_7.png"></img></td>
-				</tr>
-				<tr>
-					<th class="ui-widget-header">
-						<div data-bind="with: $vm.selectedWageTable().elementInformation().oneDimensionElement">
-		                    <div data-bind="text: elementName"></div>
-		                </div>
-					</th>
-					<th style="padding: 0 0px">
-						<div id="elem2-wrapper" style="width: 590px; overflow-x: hidden; overflow-y: scroll">
-							<table id="elem2-table">
-								<tbody>
-					                <tr>
-	                                    <com:ko bind="$vm.listSecondDimension" tag="foreach">
-				                    		<th class="ui-widget-header" style="height: 32px;">
-				                    			<div style="width: 150px;" class="limited-label" data-bind="text: name"></div>
-			                    			</th>
-				                    	</com:ko>
-			                    	</tr>
-	           					</tbody>
-							</table>
-						</div>
-					</th>
+					<td style="border: none;"><img src="../resource/＃QMM017_7.png"></img></td>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
-					<td style="padding: 0 0px">
-						<div id="elem1-wrapper" style="height: 348px; overflow-x: scroll; overflow-y: hidden;">
-							<table id="elem1-table">
-								<tbody data-bind="foreach: $vm.wageTableContent2dData">
-					                <tr>
-					                    <th class="ui-widget-header" style="height: 32px;">
-						                    <div style="width: 150px;">
-						                    	<span class="limited-label" data-bind="text: displayText"></span>
-						                    </div>
-					                    </th>
-					                </tr>
-				                </tbody>
-							</table>
-							<div style="height: 17px"></div>
-						</div>
-					</td>
-					<td style="padding: 0 0px">
-						<div id="content-wrapper" style="width: 590px; height: 348px; overflow: scroll;">
-							<table id="content-table">
-								<tbody data-bind="foreach: $vm.wageTableContent2dData">
-					                <tr>
-					                    <com:ko bind="listSecondDms" tag="foreach">
-								            <td style="border: 1px solid #CCC; vertical-align: middle;">
-					 				            <div style="height: 32px; width: 150px; text-align: center;">
-					 				            	<input class="input-amount" data-bind="ntsNumberEditor: {
-						  								option: { grouplength: 3, width: '120px' }, 
-						   								name: '#[QMM016_39]', 
-						   								value: paymentAmount, 
-						   								constraint: 'WageTablePaymentAmount', 
-						   								required: true}" /> 
-					 				            </div>
-								            </td>
-								        </com:ko>
-					                </tr>
-				                </tbody>
-							</table>
-						</div>
+					<td colspan="2">
+						<table id="grid2"></table>
 					</td>
 					<td style="border: none;"></td>
 				</tr>
