--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/qmm016.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/qmm016.a.style.css
@@ -40,6 +40,12 @@
 	margin-top: -7px;
 }
 
-#content-table tr:hover td { 
-	background-color: #C5F1F7; 
+.custom-ntsgrid-header { 
+	background-color: #CFF1A5;
+	height: 28px !important;
+	font-weight: bold; 
+}
+
+.nts-grid-sheet-buttons {
+	display: none;
 }
