--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_mgrid.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_mgrid.scss
@@ -79,6 +79,10 @@
   	color: #000;
 }
 
+.mgrid table tr td.mgrid-hide .ntsCheckBox {
+	display: none;
+}
+
 .mgrid table tr td.mgrid-disable {
 	background-color: #CCC;
 	color: #333;
