--- a/nts.uk/uk.mobile/ClientApp/views/home/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/home/index.html
@@ -4,6 +4,15 @@
     <hr />
 
     <v-input-time
+        v-model="time"
+        :name="'time'"
+        :disabled="disabled"
+        :show-title="true"
+        v-bind:constraint="validations.time"
+        :errors-always="$errors.title"
+        :columns="{title: 'col-md-2', input: 'col-md-4'}" />
+
+    <v-input-string
         v-model="title"
         v-bind:name="'title'"
         v-bind:disabled="disabled"
