--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/e.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/e.xhtml
@@ -90,8 +90,10 @@
                                                     value: wageTablePaymentAmount,
                                                     constraint: 'WageTablePaymentAmount',
                                                     option: {
+                                                        width: '110px',
                                                         grouplength: 3,
-                                                        width: '120px'
+									                    decimallength: 2,
+									                    currencyformat: 'JPY'
                                                     },
                                                     required: true}"/>
                         </td>
