--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/navbar.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/navbar.scss
@@ -67,36 +67,74 @@
 }
 
 /* Small devices (landscape phones, 576px and up) */
+
 @media (min-width: 576px) {}
 
 /* Medium devices (tablets, 768px and up) */
+
 @media (min-width: 768px) {}
 
 /* Large devices (desktops, 992px and up) */
+
 @media (min-width: 992px) {}
 
 /* Extra large devices (large desktops, 1200px and up) */
+
 @media (min-width: 1200px) {}
 
 .wrapper {
     display: flex;
-    /*width: 100%;
-    align-items: stretch;
-    perspective: 1500px;*/
-    #sidebar {
+    width: 100%;
+    overflow-x: hidden;
+    .sidebar {
         min-width: 250px;
         max-width: 250px;
         padding-top: 50px;
         min-height: 100vh;
         color: #fff;
-        background: #31353D;
         transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
+        background-color: $primary;
+        .sidebar-header {
+            padding: 5px;
+            >h3 {
+                margin: 0;
+                padding: 0
+            }
+        }
+        ul {
+            &.components {
+                li {
+                    a {
+                        display: block;
+                        color: #fff;
+                        padding: 10px;
+                        font-size: 1.1em;
+                        &:hover {
+                            color: #fff;
+                        }
+                        &.collapse {
+                            position: relative;
+                        }
+                    }
+                }
+            }
+        }
+        .dropdown-toggle::after {
+            display: block;
+            position: absolute;
+            top: 50%;
+            right: 20px;
+            transform: translateY(-50%);
+        }
+        ul ul a {
+            font-size: 0.9em !important;
+            padding-left: 30px !important;
+        }
+        a.article,
+        a.article:hover {
+            color: #fff;
+        }
     }
-}
-
-#sidebar .active {
-    margin-left: -250px;
-    transform: rotateY(100deg);
 }
 
 .navbar-btn {
@@ -104,38 +142,40 @@
     height: 30px;
     cursor: pointer;
     color: #fff;
-}
-
-.navbar-btn span {
-    width: 80%;
-    height: 2px;
-    margin: 0 auto;
-    display: block;
-    background: #fff;
-    transition: all 0.8s cubic-bezier(0.810, -0.330, 0.345, 1.375);
-    transition-delay: 0.2s;
-}
-
-.navbar-btn span:first-of-type {
-    transform: rotate(45deg) translate(2px, 2px);
-}
-
-.navbar-btn span:nth-of-type(2) {
-    opacity: 0;
-}
-
-.navbar-btn span:last-of-type {
-    transform: rotate(-45deg) translate(1px, -1px);
-}
-
-.navbar-btn.active span {
-    transform: none;
-    opacity: 1;
-    margin: 5px auto;
+    border-color: transparent;
+    background-color: transparent;
+    &:focus {
+        outline: none;
+    }
+    span {
+        width: 80%;
+        height: 2px;
+        margin: 0 auto;
+        display: block;
+        background: #fff;
+        transition: all 0.8s cubic-bezier(0.810, -0.330, 0.345, 1.375);
+        transition-delay: 0.2s;
+        &:first-of-type {
+            transform: rotate(45deg) translate(2px, 2px);
+        }
+        &:nth-of-type(2) {
+            opacity: 0;
+        }
+        &:last-of-type {
+            transform: rotate(-45deg) translate(1px, -1px);
+        }
+    }
+    &.active {
+        span {
+            transform: none;
+            opacity: 1;
+            margin: 5px auto;
+        }
+    }
 }
 
 @media (max-width: 768px) {
-    #sidebar {
+    .sidebar {
         margin-left: -250px;
         transform: rotateY(90deg);
         &.active {
