--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/navbar.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/navbar.scss
@@ -1,11 +1,20 @@
 .navbar {
     padding: 0;
+    z-index: 1050;
+    cursor: pointer;
     .navbar-toggler {
         outline: none;
         padding: 4px 12px;
         margin-right: 7px;
         color: #fff;
         border-color: transparent;
+        transition: all 0.4s cubic-bezier(0.810, -0.330, 0.345, 1.375);
+        &.show {
+            transform: rotate(180deg) translate(2px, 2px);
+        }
+        &:after {
+            display: block;
+        }
     }
     .collapse.navbar-collapse {
         &.show {
@@ -14,12 +23,15 @@
     }
     .navbar-brand {
         cursor: pointer;
+        min-width: 250px;
         margin-right: 0;
         padding-left: 15px;
         padding-right: 15px;
         border-right: 2px solid darken($color: $primary, $amount: 5);
+        transition: all 0.4s cubic-bezier(0.810, -0.330, 0.345, 1.375);
     }
     a {
+        cursor: pointer;
         &.nav-link {
             &>i,
             &>span {
@@ -53,49 +65,25 @@
     }
 }
 
-/* Small devices (landscape phones, less than 768px) */
-
-@media (max-width: 767.98px) {
-    .navbar {
-        .navbar-brand {
-            border-right: 0;
-        }
-    }
-    .navbar-collapse {
-        padding-left: 15px;
-    }
-}
-
-/* Small devices (landscape phones, 576px and up) */
-
-@media (min-width: 576px) {}
-
-/* Medium devices (tablets, 768px and up) */
-
-@media (min-width: 768px) {}
-
-/* Large devices (desktops, 992px and up) */
-
-@media (min-width: 992px) {}
-
-/* Extra large devices (large desktops, 1200px and up) */
-
-@media (min-width: 1200px) {}
-
 .wrapper {
     display: flex;
     width: 100%;
     overflow-x: hidden;
+    padding-top: 41px;
     .sidebar {
+        top: 0;
+        z-index: 1051;
+        position: fixed;
         min-width: 250px;
         max-width: 250px;
-        padding-top: 50px;
         min-height: 100vh;
         color: #fff;
         transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
         background-color: $primary;
         .sidebar-header {
             padding: 5px;
+            padding-bottom: 3px;
+            border-bottom: 4px solid darken($color: $primary, $amount: 5);
             >h3 {
                 margin: 0;
                 padding: 0
@@ -103,6 +91,11 @@
         }
         ul {
             &.components {
+                cursor: pointer;
+                overflow-y: auto;
+                padding-bottom: 25px;
+                -webkit-overflow-scrolling: touch;
+                max-height: calc(100vh - 40px);
                 li {
                     a {
                         display: block;
@@ -115,6 +108,14 @@
                         &.collapse {
                             position: relative;
                         }
+                    }
+                }
+                .collapse {
+                    &:after {
+                        transition: all 0.5s cubic-bezier(0.945, 0.020, 0.270, 0.665);
+                    }
+                    &.show:after {
+                        transform: rotate(180deg) translate(2px, 2px);
                     }
                 }
             }
@@ -135,6 +136,11 @@
             color: #fff;
         }
     }
+    .container,
+    .container-fluid {
+        padding-top: 15px;
+        margin-left: 250px;
+    }
 }
 
 .navbar-btn {
@@ -142,68 +148,89 @@
     height: 30px;
     cursor: pointer;
     color: #fff;
+    padding: 0;
     border-color: transparent;
     background-color: transparent;
     &:focus {
         outline: none;
     }
     span {
-        width: 80%;
+        width: 60%;
         height: 2px;
-        margin: 0 auto;
         display: block;
+        margin: 5px auto;
         background: #fff;
         transition: all 0.8s cubic-bezier(0.810, -0.330, 0.345, 1.375);
-        transition-delay: 0.2s;
-        &:first-of-type {
-            transform: rotate(45deg) translate(2px, 2px);
-        }
-        &:nth-of-type(2) {
-            opacity: 0;
-        }
-        &:last-of-type {
-            transform: rotate(-45deg) translate(1px, -1px);
-        }
     }
-    &.active {
+    &.show {
         span {
-            transform: none;
             opacity: 1;
-            margin: 5px auto;
-        }
-    }
-}
-
-@media (max-width: 768px) {
-    .sidebar {
-        margin-left: -250px;
-        transform: rotateY(90deg);
-        &.active {
-            margin-left: 0;
-            transform: none;
-        }
-    }
-    .navbar-btn {
-        span {
-            &:first-of-type,
-            &:nth-of-type(2),
-            &:last-of-type {
-                transform: none;
-                opacity: 1;
-                margin: 5px auto;
-            }
-        }
-        &.active span {
             margin: 0 auto;
             &:first-of-type {
                 transform: rotate(45deg) translate(2px, 2px);
             }
             &:nth-of-type(2) {
                 opacity: 0;
+                transform: none;
             }
             &:last-of-type {
                 transform: rotate(-45deg) translate(1px, -1px);
             }
+        }
+    }
+}
+
+/* Small devices (landscape phones, less than 768px) */
+
+@media (max-width: 767.98px) {
+    .navbar {
+        .navbar-brand {
+            border-right: 0;
+            padding-left: 50px;
+            padding-top: 8px;
+            padding-bottom: 3px;
+        }
+        &-collapse {
+            padding-left: 15px;
+        }
+    }
+    .wrapper {
+        display: block;
+        .sidebar {
+            top: 0;
+            min-width: 320px;
+            max-width: 320px;
+            margin-left: -320px; //transform: rotateY(90deg);
+            .sidebar-header {
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-end;
+                padding-bottom: 2px;
+                background-color: $primary;
+                margin-right: -50px;
+                border-bottom: 0;
+                h3 {
+                    flex: 1;
+                }
+            }
+            ul.components {
+                border-top: 2px solid darken($color: $primary, $amount: 5);
+            }
+            &.show {
+                margin-left: 0;
+                transform: none;
+                border-right: 1px solid darken($color: $primary, $amount: 5);
+                ul {
+                    &.components {
+                        margin: 0;
+                        max-height: calc((var(--vh, 1vh) * 100) - 40px);
+                    }
+                }
+            }
+        }
+        .container,
+        .container-fluid {
+            margin-left: 0;
         }
     }
 }
