KAF022 - fix bug #106828 & #106829 ("振休振出申請" disable -> enable )

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/m/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/m/index.xhtml
@@ -366,7 +366,7 @@
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.useAtr,
-							enable: false}"></div>
+							enable: true}"></div>
 						</td>
 						<td></td>
 						<td></td>
