add side menu & top menu (nav)

--- a/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
@@ -10,6 +10,7 @@
 @import './lumen/input.scss';
 @import './lumen/button.scss';
 @import './lumen/navbar.scss';
+@import './lumen/sidemenu.scss';
 @import './lumen/checkbox.scss';
 @import './lumen/accordion.scss';
 @import './lumen/listgroup.scss';
